--- a/score.html
+++ b/score.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div id="container">
-        <div id="container-image">Here Comes The Image </div>
+        <div id="container-image"><img src="afif-ramdhasuma-jl4BQJs87Do-unsplash.jpg" alt="Loading Please Wait.." class="image"> </div>
         <div id="container-score">
             <span class="player1">0</span>
             VS
             <span class="player2">0</span>
             <span class="score-content">Use the buttons below to change the winning-score.</span>
             <div class="select-score">
-                <span>Winning Score</span>
+                <span class="score-content">Winning Score</span>
                 <select name="Winning Score" id="win-score">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div id="container-buttons">
-            <button class="btn-player1">Player 1</button>
-            <button class="btn-reset">Reset</button>
-            <button class="btn-player2">Player 2</button>
+            <button class="btn btn-player1">Player 1</button>
+            <button class="btn btn-reset">Reset</button>
+            <button class="btn btn-player2">Player 2</button>
         </div>
     </div>
     
